cmake_minimum_required (VERSION 3.0)
project (sfrl)
add_definitions(-std=c11)
SET (PROJECT_ROOT "${PROJECT_SOURCE_DIR}")
SET(CMAKE_CXX_FLAGS "-g -Wall -Werror")
aux_source_directory(. DIR_SRCS)
add_subdirectory(sfrl)
add_executable(iris ${PROJECT_SOURCE_DIR}/examples/iris.c)
target_link_libraries(iris sfrllib)
target_link_libraries(iris m)