cmake_minimum_required (VERSION 3.0)
project (sfrl)
add_definitions(-std=c11)
SET (PROJECT_ROOT "${PROJECT_SOURCE_DIR}")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -lpthread -O3")
# SET(CMAKE_CXX_FLAGS "-g -Wall -Werror -O3")
aux_source_directory(. DIR_SRCS)
add_subdirectory(sfrl)
add_executable(iris ${PROJECT_SOURCE_DIR}/examples/iris.c)
target_link_libraries(iris sfrllib)
target_link_libraries(iris m)