aux_source_directory(. DIR_LIB_SRCS)
aux_source_directory(./activation DIR_LIB_SRCS)
aux_source_directory(./data DIR_LIB_SRCS)
aux_source_directory(./layer DIR_LIB_SRCS)
aux_source_directory(./loader DIR_LIB_SRCS)
aux_source_directory(./loss DIR_LIB_SRCS)
aux_source_directory(./metric DIR_LIB_SRCS)
aux_source_directory(./network DIR_LIB_SRCS)
aux_source_directory(./type DIR_LIB_SRCS)
aux_source_directory(./optimizer DIR_LIB_SRCS)
aux_source_directory(./utils DIR_LIB_SRCS)
add_library (sfrllib ${DIR_LIB_SRCS})